implemented ParkingGarageService and ParkingGarageController