@@ -1,6 +1,5 @@
 package com.davidpokolol.parkingsystemapi.contoller;
 
-import com.davidpokolol.parkingsystemapi.model.Vehicle;
 import com.davidpokolol.parkingsystemapi.model.response.VehicleResponse;
 import com.davidpokolol.parkingsystemapi.service.model.dto.VehicleDTO;
 import com.davidpokolol.parkingsystemapi.service.service.VehicleService;
@@ -19,7 +18,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/vehicles")
@@ -29,10 +27,9 @@ public class VehicleController {
 
     private final VehicleService vehicleService;
     private final Converter<VehicleDTO, VehicleResponse> vehicleDtoToResponseConverter;
-    private final Converter<VehicleDTO, Vehicle> vehicleDtoToEntityConverter;
 
     @GetMapping
-    public ResponseEntity<List<VehicleResponse>> findAll() {
+    public ResponseEntity<List<VehicleResponse>> getAllVehicles() {
 
         log.info("Getting all vehicles.");
         List<VehicleResponse> vehicles =
@@ -40,29 +37,29 @@ public class VehicleController {
                         .getAllVehicles()
                         .stream()
                         .map(vehicleDtoToResponseConverter::convert)
-                        .collect(Collectors.toList());
+                        .toList();
 
         return ResponseEntity.ok(vehicles);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<VehicleResponse> findById(@PathVariable final Long id) {
+    public ResponseEntity<VehicleResponse> getVehicleById(@PathVariable final Long id) {
 
-        log.info("Getting vehicle with ID: {}", id);
+        log.info("Getting a vehicle with ID: {}", id);
         Optional<VehicleDTO> vehicle = vehicleService.getVehicle(id);
         return vehicle.map(vehicleDtoToResponseConverter::convert)
                 .map(ResponseEntity::ok)
                 .orElseGet(() -> {
-                    log.warn("No vehicle found with ID: {}", id);
+                    log.warn("Vehicle not found with ID: {}", id);
                     return ResponseEntity.notFound().build();
                 });
     }
 
     @PostMapping
-    public ResponseEntity<VehicleResponse> addVehicle(@RequestBody final VehicleDTO vehicleDTO) {
+    public ResponseEntity<VehicleResponse> addVehicle(@RequestBody final VehicleDTO vehicle) {
 
-        log.info("Creating vehicle: {}", vehicleDTO);
-        return Optional.of(vehicleService.createVehicle(vehicleDTO))
+        log.info("Creating a vehicle: {}", vehicle);
+        return Optional.of(vehicleService.createVehicle(vehicle))
                 .map(vehicleDtoToResponseConverter::convert)
                 .map(ResponseEntity::ok)
                 .orElseGet(() -> ResponseEntity.badRequest().build());
@@ -70,10 +67,10 @@ public class VehicleController {
 
     @PutMapping("/{id}")
     public ResponseEntity<VehicleResponse> updateVehicle(@PathVariable final Long id,
-                                                         @RequestBody final VehicleDTO vehicleDTO) {
+                                                         @RequestBody final VehicleDTO vehicle) {
 
-        log.info("Updating vehicle with ID:{} to: {}", id, vehicleDTO);
-        return Optional.of(vehicleService.updateVehicle(id, vehicleDTO))
+        log.info("Updating a vehicle with ID:{} to: {}", id, vehicle);
+        return Optional.of(vehicleService.updateVehicle(id, vehicle))
                 .map(vehicleDtoToResponseConverter::convert)
                 .map(ResponseEntity::ok)
                 .orElseGet(() -> ResponseEntity.badRequest().build());
@@ -82,7 +79,7 @@ public class VehicleController {
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteVehicle(@PathVariable final Long id) {
 
-        log.info("Deleting vehicle with ID: {}", id);
+        log.info("Deleting a vehicle with ID: {}", id);
         vehicleService.deleteVehicle(id);
         return ResponseEntity.noContent().build();
     }
